# cloud-dyndns

./: README-Azure.md  README-Pyrax.md  README-Rackspace.md  README.md  cloud-dyndns.py  cloud_dyndns.py  pyproject.toml  sample-configuration.yaml  setup.py
clouddns/: __init__.py  azure.py  base_cloud.py  rackspace.py  setup.cfg
clouddns/azure/: README.md  __init__.py  azure.py  requirements.txt
clouddns/rackspace/: README.md  __init__.py  rackspace.py  requirements.txt
systemd/: cloud-dyndns@.service
